<resources>
    <string name="app_name">Bazar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bazar Cubano</string>
    <string name="nav_header_subtitle">info@bazarcubano.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Setting</string>
    <string name="insertar_anuncio">New Ad</string>
    <string name="favoritos">Favorites</string>
    <string name="mi_cuenta">My Account</string>
    <string name="app_info">App Information</string>
    <string name="chat">Chat</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="photos">Photos</string>
    <string name="upload_photos">Upload photos</string>
    <string name="general_info">General Info</string>
    <string name="display_name">Title</string>
    <string name="contactenos">Contact Us</string>
    <string name="ayuda_contacto">Help and Contact</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="price">Price</string>
    <string name="title">Title (100 characters max)</string>
    <string name="select_category">Select a Category</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">e-mail</string>
    <string name="category">Category</string>
    <string name="contact_info">Contact Info</string>
    <string name="location_info">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="abc_an_amazing_alphabet_book">Celulares y Accesorios</string>

    <string name="are_you_my_mother">Autos y Piezas</string>
    <string name="where_is_babys_belly_button">Deportes, Musica y Hobbies</string>
    <string name="on_the_night_you_were_born">Computadores y Accesorios</string>
    <string name="hand_hand_fingers_thumb">Servicios</string>
    <string name="the_very_hungry_caterpillar">Empleos</string>
    <string name="the_going_to_bed_book">Vivienda</string>
    <string name="oh_baby_go_baby">Mascotas</string>
    <string name="the_tooth_book">Moda y Belleza</string>
    <string name="one_fish_two_fish_red_fish_blue_fish">Divisa</string>

    <string name="dr_seuss">Dr. Seuss</string>
    <string name="karen_katz">Karen Katz</string>
    <string name="nancy_tillman">Nancy Tillman</string>
    <string name="eric_carle">Eric Carle</string>
    <string name="sandra_boynton">Sandra Boynton</string>
    <string name="infantiles">Articulos Infantiles</string>
    <string name="electrodomesticos">Para su Casa</string>
    <string name="new_item_wizard">New Item Wizard</string>

</resources>
