<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.CelularesFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Photos-->
            <com.yarolegovich.mp.MaterialPreferenceCategory
                android:id="@+id/photosCard"
                app:layout_constraintTop_toBottomOf="parent"
                app:mpc_title_color="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image1"
                        app:civ_border_color="@color/avatar_border"
                        app:civ_border_width="2dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:src="@drawable/app_logo" />

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:src="@drawable/ic_add_a_photo_gray_24dp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:src="@drawable/ic_add_a_photo_gray_24dp"
                        android:visibility="gone" />

                </LinearLayout>

                <!--<androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/image_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:scrollbars="horizontal" />

                <Button
                    android:id="@+id/upload_photo"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photos" />-->

            </com.yarolegovich.mp.MaterialPreferenceCategory>

            <!--General Info-->
            <com.yarolegovich.mp.MaterialPreferenceCategory
                android:id="@+id/infoCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photosCard"
                app:mpc_title_color="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutTitle"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/title"
                        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                        android:lines="2"
                        android:maxLength="70"
                        android:maxLines="2"
                        android:minLines="1"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutDescription"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:gravity="top|start"
                        android:hint="@string/description"
                        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                        android:lines="5"
                        android:maxLength="500"
                        android:maxLines="5"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutPrice"
                        app:errorEnabled="true"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="true"
                            android:hint="@string/price"
                            android:inputType="numberDecimal"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutStatus"
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spinnerMoneda"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinnerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.yarolegovich.mp.MaterialPreferenceCategory>

            <!--Category-->
            <com.yarolegovich.mp.MaterialPreferenceCategory
                android:id="@+id/categoryCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photosCard"
                app:mpc_title_color="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinnerSubCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

            </com.yarolegovich.mp.MaterialPreferenceCategory>

            <!--Location Info-->
            <com.yarolegovich.mp.MaterialPreferenceCategory
                android:id="@+id/locationCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photosCard"
                app:mpc_title="@string/location_info"
                app:mpc_title_color="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <com.enml.bazar.utils.MultipleSelectionSpinner
                    android:id="@+id/provinceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />


                <com.enml.bazar.utils.MultipleMunicipalitySelectionSpinner
                    android:id="@+id/municipiosSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp" />


            </com.yarolegovich.mp.MaterialPreferenceCategory>

            <!--Contact Info-->
            <com.yarolegovich.mp.MaterialPreferenceCategory
                android:id="@+id/contactCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photosCard"
                app:mpc_title="@string/contact_info"
                app:mpc_title_color="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutName"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/name"
                        android:inputType="textCapSentences|textAutoCorrect"
                        android:maxLength="100"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutEmail"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:gravity="top|start"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPhone"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:gravity="top|start"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </com.yarolegovich.mp.MaterialPreferenceCategory>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>